# lib/api-spec/openapi.yaml
@@ -696,6 +696,19 @@ components:
           type: ["string", "null"]
         seoDescription:
           type: ["string", "null"]
+        customerFields:
+          type: array
+          items:
+            type: object
+            properties:
+              type:
+                type: string
+              labelAr:
+                type: string
+              labelEn:
+                type: string
+              required:
+                type: boolean
         createdAt:
           type: string
           format: date-time
@@ -788,6 +801,19 @@ components:
           type: ["string", "null"]
         seoDescription:
           type: ["string", "null"]
+        customerFields:
+          type: array
+          items:
+            type: object
+            properties:
+              type:
+                type: string
+              labelAr:
+                type: string
+              labelEn:
+                type: string
+              required:
+                type: boolean
       required:
         - titleAr
         - titleEn
@@ -864,6 +890,19 @@ components:
           type: ["string", "null"]
         seoDescription:
           type: ["string", "null"]
+        customerFields:
+          type: array
+          items:
+            type: object
+            properties:
+              type:
+                type: string
+              labelAr:
+                type: string
+              labelEn:
+                type: string
+              required:
+                type: boolean
 
     ProductListResponse:
       type: object
